<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- String resources -->
    <string name="app_name">MiniMe</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="geo_icon">Notification Icon</string>
    <string name="speedometer_icon">Speedometer Icon</string>
    <string name="runner_icon">Runner Icon</string>
    <string name="pause_button">Pause Button</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="friends_icon">Friends Icon</string>
    <string name="daily_tasks_icon">Daily Tasks Icon</string>
    <string name="backpack_icon">Backpack Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="back_icon">Back</string>
    <string name="item_image">Item Image</string>

    <!-- Other text resources -->
    <string name="current_status">Current status</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="backpack">Backpack</string>
    <string name="settings">Settings</string>
</resources>
